--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>Welcome to CET Exams</h1>
     <p>This is the official website of <strong>CET Exams</strong>.</p>
     <p>Our app helps users learn and practice effectively for CET Haryana exams.</p>
-    <a href="/sadhuramedutech/exams/">🚀 Enter Web App</a>
+    <a href="/exams/">🚀 Enter Web App</a>
     <br><br>
     <a href="https://play.google.com/store/apps/details?id=com.games.cettest" target="_blank">📱 View on Google Play</a>
   </div>
