--- a/exams/index.html
+++ b/exams/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/exams/static/js/main.e636529c.js"></script><link href="/exams/static/css/main.5d29d587.css" rel="stylesheet"></head>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>CET Exams Web App</title><script defer="defer" src="/exams/static/js/main.d6954ee1.js"></script><link href="/exams/static/css/main.9afb04f7.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
