--- a/exams/public/index.html
+++ b/exams/public/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CET Exams Web App</title>
+    <title>Practice Papers by SE</title>
+
+    <!-- Google AdSense Script -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4769435723418888"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- React will render your app here -->
     <div id="root"></div>
+
+    <!-- Default Ad Block (bottom banner) -->
+    <div style="text-align: center; margin-top: 20px;">
+      <ins
+        class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-4769435723418888"
+        data-ad-slot="2256417961"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
   </body>
 </html>
