--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CET Exams - Mock Tests</title>
+  <title>Practice Tests By SE</title>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4769435723418888"
+     crossorigin="anonymous"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -43,5 +46,11 @@
     <br><br>
     <a href="https://play.google.com/store/apps/details?id=com.games.cettest" target="_blank">📱 View on Google Play</a>
   </div>
+
+  <!-- Footer -->
+  <footer>
+    Copyright © Designed and Developed by 
+    <span>Sadhuram Edutech</span>
+  </footer>
 </body>
 </html>
