--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <title>Redirecting...</title>
     <script type="text/javascript">
       // Redirect to your main page (home) on 404
-      var redirect = "";
+      var redirect = "/home";
       window.location.replace(redirect + window.location.hash);
     </script>
   </head>
